doc: interchange design doc in iteration 1 and iteration 2

--- a/Iteration_1/项目设计文档.md
+++ b/Iteration_1/项目设计文档.md
@@ -111,114 +111,48 @@
 |        |                         | 前置条件 | response.res为success，即应答成功                |
 |        |                         | 后置条件 | 处理返回数据                                     |
 
-### 3 pipeline脚本
+### 3 Jenkins配置
 
-#### 3.1 前端pipeline
+#### 3.1 pipeline脚本
 
 ```
 node {
-    def mvnHome
-    stage('Preparation') { // for display purposes
-        // Get some code from a GitHub repository
-        git credentialsId: '0388cc39-3d59-4094-adf5-9cf15b4ed513', url: 'http://212.129.149.40/181250043_owo/frontend-owo.git'
-    }
-    stage('Build') {
-        nodejs('myNodeJS') {
-            sh '''
-               npm install --registry=https://registry.npm.taobao.org
-               npm run build
-            '''
-        }
-    }
-    stage('Results') {
-        
-    }
+	// 拉取代码
+	stage('Git Checkout') {
+		checkout([$class: 'GitSCM', branches: [[name: '${branch}']], 					doGenerateSubmoduleConfigurations: false,
+		extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId:
+		'adf9f1d0-a09d-42e6-aa2c-c6a5dacc8ebc', url: 									'http://212.129.149.40/181250043_owo/backend-owo.git']]])
+	}
+	// 代码编译
+	stage('Maven Build') {
+		sh '''
+		export JAVA_HOME=/usr/local/jdk
+		/usr/local/maven/bin/mvn clean package -Dmaven.test.skip=true
+		'''
+	}
+	// 项目打包到镜像并推送到镜像仓库
+	stage('Build and Push Image') {
+		sh '''
+		REPOSITORY=212.129.149.40/181250043_owo/backend-owo:${branch}
+		cat > Dockerfile << EOF
+		FROM 212.129.19.40/ceshi/tomcat:v1
+		MAINTAINER wfy
+		RUN rm -rf /usr/local/tomcat/webapps/
+		ADD target/.war /usr/local/tomcat/webapps/ROOT.war
+		EOF
+		docker build -t $REPOSITORY .
+		docker login 212.219.149.40 -u 181250043 -p 181250043
+		docker push $REPOSITORY
+		'''
+	}
+	// 部署到Docker主机
+	stage('Deploy to Docker') {
+		sh '''
+		REPOSITORY=212.129.149.40/181250043_owo/backend-owo:${branch}
+		docker rm -f tomcat-java-demo |true
+		docker pull $REPOSITORY
+		docker container run -d --name tomcat-java-demo -p 88:8080 $REPOSITORY
+		'''
+	}
 }
 ```
-
-#### 3.2后端pipeline
-
-```
-pipeline {
-    agent any
-    tools {
-        maven "mvn3.6.3"
-        jdk "jdk1.8.172"
-    }
-    stages{
-        stage('Preparation') { // for display purposes
-            steps{
-            // Get some code from a GitHub repository
-            git credentialsId: '633d60b1-f49d-4bc0-a1e5-c348e32dbe6b', url: 'ssh://git@212.129.149.40:222/181250043_owo/backend-owo.git'
-            }
-        }
-        stage('Build') {
-            steps{
-                // Run the maven build
-                sh "mvn -Dautoconfig.skip=true -Dmaven.test.skip=false -Dmaven.test.failure.ignore=true clean package"
-                // sh "mvn org.jacoco:jacoco-maven-plugin:prepare-agent -f pom.xml -Dautoconfig.skip=true -Dmaven.test.skip=false -Dmaven.test.failure.ignore=true clean package"
-                // junit '**/target/surefire-reports/*.xml'
-                //配置单元测试覆盖率要求，未达到要求pipeline将会fail,code coverage.LineCoverage>20%.
-                //jacoco changeBuildStatus: true, maximumLineCoverage:"1"
-                jacoco classPattern: '**/target/classes', execPattern: '**/target/**.exec'
-            }
-        }
-        stage('Results') {
-            steps{
-                archiveArtifacts 'target/*.jar'
-                dir('/home/jerrian') {
-                    sh "export BUILD_ID='dontKillMe'"
-                    echo 'execute stop.sh shell start ...'
-                    sh "sh stop.sh"
-                    sh "sh replace.sh"
-                    echo 'execute stop.sh shell finish'
-                    sh "JENKINS_NODE_COOKIE=dontKillMe nohup sh /home/jerrian/startup.sh &"
-                }
-            }
-        }
-    }
-}
-
-```
-
-#### 3.3 stop.sh
-
-```
-#!stop.sh
-#!/bin/bash
-cd /home/jerrian
-echo "Stopping SpringBoot Application for OwO"
-ls
-pid=`ps -ef | grep demo-0.0.1-SNAPSHOT.jar | grep -v grep | awk '{print $2}'`
-if [ -n "$pid" ]
-then
-#!kill -9 done
-	echo "kill -9 pid:" $pid
-	kill -9 $pid
-fi
-```
-
-#### 3.4 replace.sh
-
-```
-jar_name=demo-0.0.1-SNAPSHOT.jar
-file_path=/var/lib/jenkins/workspace/OwO/target
-file="/home/jerrian/demo-0.0.1-SNAPSHOT.jar"
-if [ -f "$file" ]
-then
-mv /home/jerrian/demo-0.0.1-SNAPSHOT.jar /home/jerrian/backup/demo-0.0.1-SNAPSHOT.jar.`date +%Y%m%d%H%M%S`
-fi
-cp /var/lib/jenkins/workspace/OwO/target/demo-0.0.1-SNAPSHOT.jar /home/jerrian
-```
-
-#### 3.5 startup.sh
-
-```
-echo "give privilege"
-chmod 777 /home/jerrian/demo-0.0.1-SNAPSHOT.jar
-echo "executing....."
-cd /home/jerrian
-java -jar demo-0.0.1-SNAPSHOT.jar
-echo "*********************cmp on jenkins started *********************"
-```
-
