doc: 项目计划文档、启动文档最后修改

--- a/Iteration_3/软工三迭代三.md
+++ b/Iteration_3/软工三迭代三.md
@@ -116,5 +116,22 @@ jiagu关于医学领域的训练情况，train.txt越大，出来的结果越不
 
 产品功能完善目标：
 
-- [ ] 
+- [ ] 用户”我的信息“，改密码改用户名
+- [ ] 使用文档和首页文字
+- [x] 图谱名称修改
+- [x] 图谱保存有bug
+- [x] 删除图谱有bug
+- [x] 我的知识图谱界面按钮布局修改，新增知识融合
+- [x] 知识图谱编辑界面新增拓展功能问答，悬浮右下角的聊天页面
+- [ ] 写迭代三文档
+- [x] 服务器的重新配置
 
+
+
+## 第五次小组会议6.18
+
+成果验收
+
+检查安排
+
+录制展示视频
