fix: 需求规格说明文档

--- a/Iteration_3/需求规格说明书.md
+++ b/Iteration_3/需求规格说明书.md
@@ -1,3 +1,16 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div align='center' ><font size=7><b>需求规格说明书</b></font></div> 
 
 
@@ -6,7 +19,7 @@
 
 完成人：戎鑫
 
-最终修改时间：2021.4.18
+最终修改时间：2021.6.18
 
 文档更新记录表：
 
@@ -14,6 +27,42 @@
 | -------- | --------- | ---------------- | ------ |
 | 戎鑫     | 2021.6.16 | 完成文档主要内容 | V1.0   |
 | 戎鑫     | 2021.6.17 | 完善文档         | V2.0   |
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -78,39 +127,43 @@ BO-4：在第三版应用之后的6个月内，使用本平台的知识图谱的
 
 FE-1：登录、注册
 
-FE-2：读取json/xml类型的图谱并进行编辑
+FE-2：查看我的信息，修改用户名、密码
 
-FE-3：输入文本解析图谱并编辑
+FE-3：查看使用文档
 
-FE-4：浏览我的知识图谱并编辑
+FE-4：读取json/xml类型的图谱并进行编辑
 
-FE-5：融合知识图谱并编辑
+FE-5：输入文本解析图谱并编辑
 
-FE-6：通过拖拽等可视化方式调整图谱布局。
+FE-6：浏览我的知识图谱并编辑
 
-FE-7：增加、编辑、搜索、标记、取消高亮实体
+FE-7：融合知识图谱并编辑
 
-FE-8：增加、编辑、搜索、标记、取消高亮关系
+FE-8：通过拖拽等可视化方式调整图谱布局。
 
-FE-9：显示/不显示关系标签
+FE-9：增加、编辑、搜索、标记、取消高亮实体
 
-FE-10：图谱名称修改
+FE-10：增加、编辑、搜索、标记、取消高亮关系
 
-FE-11：重置图谱
+FE-11：显示/不显示关系标签
 
-FE-12：信息统计
+FE-12：图谱名称修改
 
-FE-13：排版模式
+FE-13：重置图谱
 
-FE-14：力导图模式
+FE-14：信息统计
 
-FE-15：固定图谱
+FE-15：排版模式
 
-FE-16：保存知识图谱
+FE-16：力导图模式
 
-FE-17：导出知识图谱为图片、xml
+FE-17：固定图谱
 
-FE-18：智能问答
+FE-18：保存知识图谱
+
+FE-19：导出知识图谱为图片、xml
+
+FE-20：智能问答
 
 ## 2.3 用户特征
 
@@ -157,6 +210,18 @@ AS-2：服务器所在的网络是安全的
 ![注册界面](pic\注册界面.png)
 
 <div align='center' ><font size=4><b>注册界面</b></font></div> 
+
+
+
+![平台使用说明书](pic\平台使用说明书.png)
+
+<div align='center' ><font size=4><b>平台使用说明</b></font></div> 
+
+
+
+![智能问答说明](E:\大三下\软件工程与计算Ⅲ\code\developdocs\Iteration_3\pic\智能问答说明.png)
+
+<div align='center' ><font size=4><b>智能问答说明</b></font></div> 
 
 
 
@@ -698,6 +763,62 @@ AS-2：服务器所在的网络是安全的
 | chartBox.onMessageWasSent (message) | 用户发送消息                     |
 | chartBox.msgProcess(msg)            | 系统根据问题到知识图谱中查找结果 |
 | chartBox.closeChat ()               | 系统关闭聊天                     |
+
+### 3.2.21 用户修改用户名
+
+#### 3.2.21.1 特征描述
+
+用户点击我的信息按钮，点击修改用户名后填写新名称保存
+
+#### 3.2.21.2 刺激/响应序列
+
+刺激：用户点击我的信息按钮
+
+响应：系统跳转到个人信息界面
+
+刺激：用户点击修改用户名按钮
+
+响应：系统跳出用户名填写框
+
+刺激：用户填写新用户名，点击保存
+
+响应：系统修改用户名
+
+#### 3.2.21.3 相关功能需求
+
+| 方法                          | 作用           |
+| ----------------------------- | -------------- |
+| userInfo.saveModify(formName) | 系统修改用户名 |
+
+### 3.2.22 用户修改密码
+
+#### 3.2.22.1 特征描述
+
+用户点击我的信息按钮，点击修改密码后填写新密码保存
+
+#### 3.2.22.2 刺激/响应序列
+
+刺激：用户点击我的信息按钮
+
+响应：系统跳转到个人信息界面
+
+刺激：用户点击修改密码按钮
+
+响应：系统跳出密码填写框
+
+刺激：用户填写新密码，点击保存
+
+响应：系统修改密码
+
+#### 3.2.22.3 相关功能需求
+
+| 方法                             | 作用         |
+| -------------------------------- | ------------ |
+| userInfo.saveModifyPwd(formName) | 系统修改密码 |
+
+
+
+
 
 ## 3.3 非功能需求
 
