fix: 需求规格说明文档增加新功能

--- a/Iteration_3/需求规格说明书.md
+++ b/Iteration_3/需求规格说明书.md
@@ -213,6 +213,12 @@ AS-2：服务器所在的网络是安全的
 
 
 
+![修改用户名、密码](pic\修改用户名、密码.png)
+
+<div align='center' ><font size=4><b>修改用户名、密码</b></font></div> 
+
+
+
 ![平台使用说明书](pic\平台使用说明书.png)
 
 <div align='center' ><font size=4><b>平台使用说明</b></font></div> 
